[gd_scene load_steps=8 format=3 uid="uid://b5axpwmaebohs"]

[ext_resource type="Script" path="res://scripts/apple_tree.gd" id="1_o2jk5"]
[ext_resource type="Texture2D" uid="uid://bk16g7effvdm5" path="res://assets/survivalgame-appletree.png" id="2_3dhac"]
[ext_resource type="Resource" uid="uid://bknb2tl1flheg" path="res://inventory/inventory_items/apple.tres" id="2_trb2p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gq5ov"]
atlas = ExtResource("2_3dhac")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndyrw"]
atlas = ExtResource("2_3dhac")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxkyc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq5ov")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndyrw")
}],
"loop": true,
"name": &"no_apples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sqqps"]
radius = 48.0

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_o2jk5")
item = ExtResource("2_trb2p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pxkyc")
animation = &"apples"

[node name="pickeable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickeable_area"]
shape = SubResource("CircleShape2D_sqqps")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pickeable_area" to="." method="_on_pickeable_area_body_entered"]
[connection signal="body_exited" from="pickeable_area" to="." method="_on_pickeable_area_body_exited"]
[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
